helm/defectdojo/defectdojo-dev-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "defectdojo-dev-rule"
spec:
  hosts:
    - defectdojo-dev.q2devsecops.com
  gateways:
    - "istio-system/istio-autogenerated-k8s-ingress"
  http:
    - route:
        - destination:
            port:
              number: 80
            host: defectdojo-dev-django.defectdojo-dev
